# fdi-dasi-cris-ire

./: .gitignore  Dockerfile  README.md  constants.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
fdi-dasi/: config.py  constants.py  estado_butler.json  install_ollama.sh  main.py  notas  run_ollama.sh  stop_ollama.sh
fdi-dasi/core/: config.py  negotiation.py  prompt.py
fdi-dasi/docs/: architecture.md
fdi-dasi/schemas/: agent_message.py
fdi-dasi/services/: __init__.py  agent.py  butler_service.py  llm_client.py  memory.py  ollama_service.py  prompt.py
fdi-dasi/static/css/: style.css
fdi-dasi/templates/: index.html
schemas/: agent_message.py
tests/: conftest.py  test_agent_negotiation.py  test_api_endpoints.py  test_butler_service.py  test_ollama_integration.py
