[project]
name = "fdi-dasi-eminem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.1",
    "requests==2.32.5",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
]
