[project]
name = "fdi-dasi-eminem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.133.1",
    "requests==2.32.5",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic_settings>=2.13.1",
    "ollama>=0.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",          # mock de httpx (send_message_to_alias, send_package)
    "responses>=0.25",      # mock de requests (get_connected_users, get_info)
]
